--- a/src/Assets/CSS/covid-statistics.css
+++ b/src/Assets/CSS/covid-statistics.css
@@ -31,3 +31,8 @@
   height: 22px;
   margin-right: 4px;
 }
+.chart-tip {
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: -400px !important;
+}
